--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "dependencies": {
     "rgui-ui-base": "^0.2.0-alpha.4",
     "validator": "^5.5.0"
+  },
+  "peerDependencies": {
+    "regularjs": "^0.4.3"
   }
 }
