--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "textarea"
   ],
   "dependencies": {
-    "rgui-ui-base": "^0.2.0-alpha.6",
+    "rgui-ui-base": "^0.2.0",
     "validator": "^5.5.0"
   },
   "peerDependencies": {
